--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,23 @@ input {
     border-radius: 20px;
     background-image:url('../images/UKFrackingMapwithHoles.png');
     background-repeat:no-repeat;
+    cursor: none;
+}
+
+/* cursor element */
+#fracking-rig {
+    position: absolute;
+    background: url('../images/cursor.png') no-repeat;
+    width: 260px;
+    height: 239px;
+    cursor: none;
 }
 
 .hole {
     width: 50px;
     height: 50px;
     margin: 2px;
-    cursor: pointer;
+    cursor: none;
     text-align: center;
 	position:relative;
 }
@@ -66,7 +76,6 @@ input {
 }
 
 .hole.on {
-    cursor: pointer;
     background-size: contain;
 }
 
